# python-assignments

02_unit_converter/: unit-converter.py
03_password_generator/: README.md  main.py
04_assignments/assignments_00_to_05/05_triangle_perimeter/: main.py
04_assignments/assignments_00_to_05/06_square_number/: main.py
04_assignments/assignments_01/01_basics/: 00_joke_bot.py  01_double_it.py  02_liftoff.py  03_guess_my_number.py  04_random_numbers.py
04_assignments/assignments_01/Project 3 QR code encoder  decoder Python Project/: main.py  pyproject.toml
04_assignments/assignments_01/Project 4 Tic-Tac-Toe Python Project/: game.py  player.py  pyproject.toml
04_assignments/assignments_01/Project 5 Binary Search Python Project/: main.py  pyproject.toml
04_assignments/assignments_01/Project 6 Bulk File Re-namer Python Project/: main.py  pyproject.toml
04_assignments/assignments_01/Project 7 Weather Program Python Project/: .env  main.py  pyproject.toml
04_assignments/assignments_01/Project 8 Streamlit Crash Course Build Data-Driven Python Web Apps in Minutes/: main.py  main2.py  main3.py  pyproject.toml
04_library_manager/: books_data.json
05_secure_data_encryption/: data.json  main.py
06_Build_Compose_and_Decorate_A_Complete_Traditional_OOP/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
growth-mindset-challenge-python/: README.md  app.py  pyproject.toml
library-manager/: library.py
unit-converter/: pyproject.toml  unit-converter.py  unit-converterrr.py
(+72 files in other folders)
