[project]
name = "growth-mindset-challenge-python"
version = "0.1.0"
description = "A simple app to clean, visualize, and convert CSV/Excel files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
